--- a/src/index.html
+++ b/src/index.html
@@ -3,30 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <title>Do4you</title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">Do4y</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+  <nav class="navbar navbar-expand-md navbar-light">
+
+    <a class="navbar-brand" href="#"><img id="logo" src="images/logo_light_version.png"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="pages/apprenticeship.html">Apprenticeship</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Apprenticeship</a>
+          <a class="nav-link" href="pages/motivation.html">Motivation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Motivation</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Holiday</a>
+          <a class="nav-link" href="pages/journey.html">Journey</a>
         </li>
       </ul>
     </div>
   </nav>
+  <img id="homepicture" src="images/home_page.png" width="200px">
+  <p> We people love stories. I will tell my and some others stories. We need to believe in ourself. We're changing the world, so I will share my knowledge.First of all why did I build my website. There is few points, I will tell you some of them. I want to increase my knowledge of building a website and second of all I want to share my knowledge. I hope you like it so far and looking forward for visitors. Here you can see my story and experierence of apprentiship, motivation you need and which I needed and some journey which you maybe didn't hear. If you want to home page you just need to click on logo.</p>
   </body>
 </html>
