--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <title>Do4you</title>
   </head>
   <body>
-
+  <a id="header" href="#"><img class="center" src="images/logo.png"></a>
   <nav class="navbar navbar-expand-md navbar-light">
 
-    <a class="navbar-brand" href="#"><img id="logo" src="images/logo_light_version.png"></a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mx-auto">
         <li class="nav-item">
           <a class="nav-link" href="pages/apprenticeship.html">Apprenticeship</a>
         </li>
