--- a/pages/motivation.html
+++ b/pages/motivation.html
@@ -11,14 +11,15 @@
     <title>Motivation</title>
 </head>
 <body>
+<a id="header" href="../index.html"><img class="center" src="../images/logo.png"></a>
 <nav class="navbar navbar-expand-md navbar-light">
 
-    <a class="navbar-brand" href="../index.html"><img id="logo" src="../images/logo_light_version.png"></a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mx-auto">
             <li class="nav-item">
                 <a class="nav-link" href="apprenticeship.html">Apprenticeship</a>
             </li>
